# xome_langgraph

./: .gitignore  CLAUDE.md  README.md  app.yaml  databricks.yml  langgraph_workflow.mmd  pipeline_flow.mmd  pyproject.toml
agent_server/: agent.py  campaign_api.py  chat_api.py  config.py  email_generator.py  graph.py  graph_nodes.py  graph_state.py  prompts.py  start_server.py  tools.py  utils.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: campaign.ts  chat.ts
frontend/src/components/chat/: ChatMessage.tsx  ChatPanel.tsx
frontend/src/components/email/: EmailActions.tsx  EmailPreview.tsx
frontend/src/components/filters/: FilterPanel.tsx  metros.ts
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/properties/: PropertyCard.tsx  PropertyDetailModal.tsx  PropertyGrid.tsx
frontend/src/components/users/: UserDropdown.tsx  UserProfileCard.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
scripts/: start_app.py
